test_regress/t/t_param_noval_bad.out
%Error: t/t_param_noval_bad.v:7:22: Parameter without initial value is never given value (IEEE 1800-2023 6.20.1): 'P'
                                  : ... note: In instance 't'
    7 | module t #(parameter P);
      |                      ^
%Warning-WIDTHTRUNC: t/t_param_noval_bad.v:10:7: Logical operator GENFOR expects 1 bit on the For Test Condition, but For Test Condition's VARREF 'P' generates 32 bits.
                                               : ... note: In instance 't'
   10 |       for (j=0; P; j++)
      |       ^~~
                     ... For warning description see https://verilator.org/warn/WIDTHTRUNC?v=latest
                     ... Use "/* verilator lint_off WIDTHTRUNC */" and lint_on around source to disable this message.
%Error: t/t_param_noval_bad.v:10:7: Non-genvar used in generate for: 'j'
                                  : ... note: In instance 't'
   10 |       for (j=0; P; j++)
      |       ^~~
%Error: t/t_param_noval_bad.v:10:7: Loop unrolling failed.
                                  : ... note: In instance 't'
   10 |       for (j=0; P; j++)
      |       ^~~
%Error-UNSUPPORTED: t/t_param_noval_bad.v:10:7: Unsupported: Can't unroll generate for; Unable to unroll loop
                                              : ... note: In instance 't'
   10 |       for (j=0; P; j++)
      |       ^~~
%Error: t/t_param_noval_bad.v:10:7: For loop doesn't have genvar index, or is malformed
                                  : ... note: In instance 't'
   10 |       for (j=0; P; j++)
      |       ^~~
%Error: Internal Error: t/t_param_noval_bad.v:10:7: ../V3Param.cpp:#: GENFOR should have been wrapped in BEGIN
                                                  : ... note: In instance 't'
   10 |       for (j=0; P; j++)
      |       ^~~
